# mimallocator

./: .gitmodules  .travis.yml  Cargo.toml  README.md
ci/: run.sh  tools.sh
mimalloc-sys/: Cargo.toml  README.md  build.rs
mimalloc-sys-test/: Cargo.toml  build.rs
mimalloc-sys-test/src/: main.rs
mimalloc-sys-test/test/: main.rs
mimalloc-sys/src/: lib.rs
mimalloc-sys/tests/: override.rs
mimallocator/: Cargo.toml
mimallocator/src/: lib.rs
mimallocator/tests/: smoke.rs
src/: lib.rs
tests/: smoke.rs
