[package]
name = "mimallocator"
version = "0.1.0"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["allocator", "mimalloc"]
categories = ["memory-management", "api-bindings"]
repository = "https://github.com/gnzlbg/mimallocator"
homepage = "https://github.com/gnzlbg/mimallocator"
documentation = "https://docs.rs/mimallocator"
description = """
A Rust allocator backed by mimalloc
"""

[dependencies]
mimalloc-sys = { version = "0.1", path = "mimalloc-sys" }