[package]
name = "mimallocator"
version = "0.1.2"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
keywords = ["allocator", "mimalloc"]
categories = ["memory-management", "api-bindings"]
repository = "https://github.com/gnzlbg/mimallocator"
homepage = "https://github.com/gnzlbg/mimallocator"
documentation = "https://docs.rs/mimallocator"
description = """
A Rust allocator backed by mimalloc
"""

[workspace]
members = ['mimalloc-sys-test']

[badges]
travis-ci = { repository = "gnzlbg/mimallocator" }
is-it-maintained-issue-resolution = { repository = "gnzlbg/mimallocator" }
is-it-maintained-open-issues = { repository = "gnzlbg/mimallocator" }
maintenance = { status = "actively-developed" }

[features]
default = []
secure = ["mimalloc-sys/secure"]
check_full = ["mimalloc-sys/check_full"]
stats = ["mimalloc-sys/stats"]

[dependencies]
mimalloc-sys = { version = "0.1", path = "mimalloc-sys" }
