[package]
name = "mimalloc-sys-test"
version = "0.1.0"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
edition = "2015"
build = "build.rs"

[dependencies]
mimalloc-sys = { path = "../mimalloc-sys" }
libc = "0.2"

[build-dependencies]
ctest = "0.2"

[features]
default = []
override = [ "mimalloc-sys/override" ]