[package]
name = "mimalloc-sys"
version = "0.1.2"
authors = ["gnzlbg <gonzalobg88@gmail.com>"]
edition = "2018"
build = "build.rs"
links = "mimalloc"
license = "MIT/Apache-2.0"
repository = "https://github.com/gnzlbg/mimallocator"
homepage = "https://github.com/gnzlbg/mimallocator"
documentation = "https://docs.rs/mimalloc-sys"
keywords = ["allocator", "mimalloc"]
categories = ["memory-management", "api-bindings"]
description = """
Rust FFI bindings to mimalloc
"""

[badges]
travis-ci = { repository = "gnzlbg/mimallocator" }
is-it-maintained-issue-resolution = { repository = "gnzlbg/mimallocator" }
is-it-maintained-open-issues = { repository = "gnzlbg/mimallocator" }
maintenance = { status = "actively-developed" }

[features]
default = []
secure = []
check_full = []
stats = []

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
